# conways-game-of-life

./: CMakeLists.txt  GLOB_RECURSE  README.md  imgui.ini
src/: Board.cpp  Board.h  BoardRenderer.cpp  BoardRenderer.h  CMakeLists.txt  Cell.h  CellRenderer.cpp  CellRenderer.h  EntryPoint.cpp  ImguiDebugWindowManager.cpp  ImguiDebugWindowManager.h  WindowEventHandler.cpp  WindowEventHandler.h
src/common/: CMakeLists.txt
src/common/event/: Event.h  EventSystem.cpp  EventSystem.h  EventSystemUnitTest.h  Listener.h
src/common/event/common-events/: CommonEventDefinitions.h  CommonWindowEvents.h
src/common/tools/: FPSDebugWindow.h
src/common/utils/: LinkedList.h  LinkedListUnitTest.h  Logger.h  PendingList.h  PendingListUnitTest.h  UnitTestClass.cpp  UnitTestClass.h
src/events/: CMakeLists.txt  ConwayEventsDefinitions.h  ConwaysEvents.h
